# cpp-cmake-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: app.cpp
src/helloworld/: helloworld.cpp
src/lib/: headerOnlyClass.hpp  regularClass.cpp  regularClass.hpp
